--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.3"
   },
